--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://tabzz-source.github.io/GoVibe",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6"
   }
 }
